--- a/DatingApp-SPA/src/app/Members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/Members/member-list/member-list.component.html
@@ -1,4 +1,33 @@
-<div class="container mt-5">
+<div class="text-center mt-3">
+  <h2>Your matches - {{pagination.totalItems}} found</h2>
+</div>
+<div class="container mt-3">
+  <form class="form-inline mb-3" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
+    <div class="form-group">
+      <!-- Min age -->
+      <label for="minAge">AgeFrom:</label>
+      <input type="number" class="form-control ml-1" style="width: 70px" id="minAge"
+             [(ngModel)]="userParams.minAge" name="minAge">
+    </div>
+    <!-- Max Age -->
+    <div class="form-group px-2"><label for="maxAge">Age To:</label>
+      <input type="number" class="form-control ml-1" style="width: 70px" id="maxAge" name="maxAge"
+             [(ngModel)]="userParams.maxAge">
+    </div>
+    <!-- Show age -->
+    <div class="form-group px-2">
+      <label for="gender">Show:</label>
+      <select name="gender" id="gender" class="form-control ml-1" style="width: 130px">
+        <!-- Gender, filled in programatically -->
+        <option>
+
+        </option>
+      </select>
+    </div>
+    <!-- Submit filters -->
+    <button type="submit" class="btn btn-dark" style="margin-left:10px">Apply Filters</button>
+    <button type="button" class="btn btn-warning" style="margin-left:10px">Reset Filter</button>
+  </form>
   <div class="row">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
       <app-member-card [user]="user"></app-member-card>
