--- a/DatingApp-SPA/src/app/Members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/Members/member-list/member-list.component.html
@@ -27,13 +27,22 @@
     <!-- Submit filters -->
     <button type="submit" class="btn btn-dark" style="margin-left:10px">Apply Filters</button>
     <button type="button" class="btn btn-warning" (click)="resetFilters()" style="margin-left:10px">Reset Filter</button>
+    <!-- Filters -->
+    <div class="col">
+      <div class="btn-group float-right">
+        <button type="button" name="orderBy" class="btn btn-dark" [(ngModel)]="userParams.orderBy" (click)="loadUsers()" btnRadio="lastActive">Last Active</button>
+        <button type="button" name="orderBy" class="btn btn-dark" [(ngModel)]="userParams.orderBy" (click)="loadUsers()" btnRadio="created">Newest Members</button>
+      </div>
+    </div>
   </form>
+  <!-- Member Cards -->
   <div class="row">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
       <app-member-card [user]="user"></app-member-card>
     </div>
   </div>
 </div>
+<!-- Pagination -->
 <div class="d-flex justify-content-center">
   <pagination [boundaryLinks]="true"
               [totalItems]="pagination.totalItems"
