--- a/DatingApp-SPA/src/app/lists/lists.component.html
+++ b/DatingApp-SPA/src/app/lists/lists.component.html
@@ -1,3 +1,24 @@
-<p>
-  lists works!
-</p>
+<div class="text-center mt3">
+  <h2> {{likesParam === 'Likers' ? 'Members who like me' : 'Members who I\'ve Liked'}} : {{pagination.totalItems}} </h2>
+</div>
+<div class="container mt-3">
+  <div class="row">
+    <div class="btn-group">
+      <button class="btn btn-dark" [(ngModel)]="likesParam" btnRadio="Likers" (click)="loadUsers()">Members who like me</button>
+      <button class="btn btn-dark" [(ngModel)]="likesParam" btnRadio="Likees" (click)="loadUsers()">Members who I've liked.</button>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7 col-md-4 col-lg-4 col-xl-2" *ngFor="let user of users">
+    <app-member-card [user]="user"></app-member-card>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage" [(ngModel)]="pagination.currentPage"
+                (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"
+    >
+
+    </pagination>
+  </div>
+</div>
